<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OpenCalc</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_text">Hello blank text</string>
    <string name="title_activity_function">Function</string>
    <string name="title_function_entry">Functions</string>
    <string name="title_function_graph">Graphing</string>
    <string name="title_activity_history">Calculation History</string>
    <string name="title_activity_function_list">Custom Functions</string>
    <string name="title_activity_graph">Function Graphing</string>
    <string name="symbol_zero">0</string>
    <string name="pi_string">\u03C0</string>
    <string name="symbol_backspace">\u2190</string>
    <string name="button_add_function">Add Function</string>
    <string name="text_expression">Expression: </string>
    <string name="text_result">Result: </string>
    <string name="text_name">Name: </string>
    <string name="hint_function_name">Enter the name of your function here\u2026</string>
    <string name="text_token">Token: </string>
    <string name="text_ellipsis">\u2026</string>
    <string name="text_parameters">Parameters: </string>
    <string name="hint_parameters">Enter the parameters of your function here, separated by commas\u2026</string>
    <string name="hint_expression">"Enter the expression of your function including variables\u2026"</string>
    <string name="text_submit">Submit</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_algebra">Alg</string>
    <string name="text_geometry">geom</string>
    <string name="text_trig">Trig</string>
    <string name="text_new">New</string>
    <string name="text_root">root</string>
    <string name="text_abs">abs</string>
    <string name="text_factorial">!</string>
    <string name="text_ln">ln</string>
    <string name="text_log">log</string>
    <string name="text_log2">log2</string>
    <string name="text_log10">log10</string>
    <string name="text_min">min</string>
    <string name="text_max">max</string>
    <string name="text_ncr">nCr</string>
    <string name="text_npr">nPr</string>
    <string name="text_sin">sin</string>
    <string name="text_cos">cos</string>
    <string name="text_tan">tan</string>
    <string name="text_asin">asin</string>
    <string name="text_acos">acos</string>
    <string name="text_atan">atan</string>
    <string name="text_sec">sec</string>
    <string name="text_csc">csc</string>
    <string name="text_cot">cot</string>
    <string name="text_acot">acot</string>
    <string name="text_acsc">acsc</string>
    <string name="text_asec">asec</string>
    <string name="text_num1">1</string>
    <string name="text_num2">2</string>
    <string name="text_num3">3</string>
    <string name="text_num4">4</string>
    <string name="text_num5">5</string>
    <string name="text_num6">6</string>
    <string name="text_num7">7</string>
    <string name="text_num8">8</string>
    <string name="text_num9">9</string>
    <string name="text_num0">0</string>
    <string name="symbol_left_paren">(</string>
    <string name="symbol_right_paren">)</string>
    <string name="symbol_comma">,</string>
    <string name="symbol_period">.</string>
    <string name="symbol_plus">+</string>
    <string name="symbol_minus">-</string>
    <string name="symbol_multiply">*</string>
    <string name="symbol_divide">/</string>
    <string name="symbol_power">^</string>
    <string name="text_e">e</string>
    <string name="action_show_calculation_history">Show Calculation History</string>
    <string name="action_graph_menu">Graph Menu</string>
    <string name="text_parameter_default">P: </string>
    <string name="hint_graph_expression">Enter your expression\u2026</string>
    <string name="text_primary_axis">x-axis</string>
    <string name="hint_parameter_value">Enter the value\u2026</string>
    <string name="default_parameter_value">0</string>
    <string name="symbol_equals">=</string>
    <string name="symbol_clear">C</string>
    <string name="symbol_triangle">\u25B2</string>
    <string name="symbol_square">\u25A0</string>
    <string name="symbol_circle">\u25EF</string>
    <string name="text_area_triangle">A{TRI}</string>
    <string name="text_area_circle">A{O}</string>
    <string name="text_area_square">A{SQR}</string>
    <string name="text_perimeter_square">P{SQR}</string>
    <string name="text_circumference_circle">C{O}</string>
    <string name="text_volume_circle">V{O}</string>
    <string name="text_volume_box">V{SQR}</string>
    <string name="symbol_sqrt">\u221A</string>
    <string name="symbol_cbrt">\u221B</string>
    <string name="text_contextpad_default">DEF</string>
    <string name="text_stored_result">ANS</string>
    <string name="text_stored_result_plus">ANS+</string>
    <string name="text_clear_history">Clear Calculation History</string>
    <string name="text_number_params">"Parameters: "</string>
    <string name="action_back_to_calculator">Back to Calculator</string>
    <string name="hint_function_token">Enter the token for this function to be used in expressions\u2026</string>
    <string name="text_delete">Delete</string>
    <string name="text_edit">Edit</string>
    <string name="text_credits">Credits</string>
    <string-array name="array_feedback_type">
        <item >Bug Report</item>
        <item >Suggestion</item>
        <item >Other</item>
    </string-array>
        <string name="text_user_feedback">User Feedback</string>
        <string name="text_subject">"Subject: "</string>
        <string name="text_category">"Category: "</string>
        <string name="desc_feedback_spinner">The type of feedback you would like to submit about this application.</string>
        <string name="hint_subject">Enter the subject of your feedback report\u2026</string>
        <string name="prompt_select_category">Select Category\u2026</string>
        <string name="hint_feedback">Enter your feedback report here.\u2026</string>
        <string name="email_app_feedback">opencalcandroid@gmail.com</string>
        <string name="action_feedback">Send Feedback</string>
        <string name="text_modulus">%</string>
        <string name="text_cbrt">CBRT</string>
        <string name="title_activity_feedback">Send Feedback\u2026</string>
        <string name="action_rating">Rate it\u2026</string>

</resources>
