<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_app_background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/text_user_feedback"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/White" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_subject"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/White" />

        <EditText
            android:id="@+id/feedbackSubjectText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/White"
            android:ems="10"
            android:hint="@string/hint_subject" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_category"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/White" />

        <Spinner
            android:id="@+id/feedbackCategorySpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/White"
            android:contentDescription="@string/desc_feedback_spinner"
            android:entries="@array/array_feedback_type"
            android:prompt="@string/prompt_select_category" />

    </LinearLayout>

    <EditText
        android:id="@+id/feedbackContentText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@color/White"
        android:ems="10"
        android:hint="@string/hint_feedback"
        android:inputType="textMultiLine"
        android:padding="8dp" />

    <Button
        android:id="@+id/feedbackAddButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_submit" />

</LinearLayout>
